@@ -1,6 +1,7 @@
 Version 6.2.4
 - Added freopen(), tmpfile(), mktemp(), and some other stdio functions
 - Added some missing math functions
+- Correctly handled casts to void in nucode output
 - Fixed some problems with sizeof() used to declare local variables
 - Fixed incorrect multiple casting of union initialization
 - Several improvements to C locale() related functions
